+title , text-center

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+    <div class="container mt-4 mb-4 text-center">
+        <!-- Contenitore principale con margini superiori e inferiori -->
+        <h2 class="font-weight-bold">Our amazing tours</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus error rem, facilis eius, assumenda labore iste, sequi commodi at iure modi voluptas est autem totam reiciendis.</p>
+
+
     <div class="container">
         <!-- Contenitore principale con larghezza del 80% -->
         <div class="row">
